--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "temitope adesoji",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
